# demo

./: .gitignore  .gitmodules  docker-compose.yaml  env.example  init
backend/: Dockerfile  example.env  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 789bbdeecfed_.py
backend/config/: db.py  settings.py
db/: init.sql
frontend/src/: App.js
gateway/: Dockerfile
gateway/conf.d/: demo.conf
